# hakaton

./: .gitignore  README.md
backend/: database.py  disdoc.txt  main.py  pyproject.toml  rec.py  schema.py
backend/ds/: clustering.ipynb  ranking.ipynb  users.ipynb
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Header.css  Header.js  Sidebar.css  Sidebar.js  VideoCard.css  VideoCard.js  VideoGrid.css  VideoGrid.js
frontend/src/assets/: videos.json
