[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yaroslav.safonov <yaroslav.safonov97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false
