[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yaroslav.safonov <yaroslav.safonov97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.2"
pymongo = {extras = ["srv"], version = "^4.9.1"}
toml = "^0.10.2"
motor = "^3.6.0"
polars = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false
